<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KCup Usage Widget</string>
    <string name="kcup_small_title">Small</string>
    <string name="kcup_medium_title">Medium</string>
    <string name="kcup_large_title">Large</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="reset">Reset Usage</string>
    <string name="developer">Developer: Sainaga Srikantham</string>
    <string name="version">Version: 1.0</string>
    <string name="agree_terms">Got it, I want to use the widget.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_text">This app is NOT affiliated with Kuerig or any KCup maker.\n\nIt was initially developed for personal usage and eventually released to the public.\n\nNo copyrights were intentionally infringed.</string>

</resources>
