<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_disclaimer_text"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:gravity="left|center"
        android:text="@string/disclaimer"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="sans" />
    
    <TextView
        android:id="@+id/textView_disclaimer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_disclaimer"
        android:layout_marginTop="18dp"
        android:gravity="left|center"
        android:text="@string/disclaimer_text"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="sans" />

    <Button
        android:id="@+id/button_agree_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/agree_terms" />

    <TextView
        android:id="@+id/textView_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_disclaimer_text"
        android:layout_centerVertical="true"
        android:gravity="left|center"
        android:text="@string/about"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_about"
        android:layout_below="@+id/textView_about"
        android:layout_marginTop="14dp"
        android:gravity="left|center"
        android:text="@string/developer"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="sans" />

    <TextView
        android:id="@+id/textView_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_developer"
        android:layout_below="@+id/textView_developer"
        android:gravity="left|center"
        android:text="@string/version"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:typeface="sans" />

</LinearLayout>