<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_widget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/widget_icon_kcup_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_kcup_small" />

            <TextView
                android:id="@+id/textView_kcup_small_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/kcup_small_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColorHint="@android:color/white"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/widget_icon_kcup_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_kcup_medium" />

            <TextView
                android:id="@+id/textView_kcup_medium_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kcup_medium_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColorHint="@android:color/white"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/widget_icon_kcup_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_kcup_large" />

            <TextView
                android:id="@+id/textView_kcup_large_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/kcup_large_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColorHint="@android:color/white"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_reset_usage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <TextView
            android:id="@+id/textView_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/developer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

</LinearLayout>